@@ -50,7 +50,7 @@
 enum {
 	/** The Application Programming Interface (API) version, incremented
 	 * whenever any plugin data types are modified or appended to. */
-	GEANY_API_VERSION = 198,
+	GEANY_API_VERSION = 199,
 
 	/** The Application Binary Interface (ABI) version, incremented whenever
 	 * existing fields in the plugin data types have to be changed or reordered. */
@@ -481,6 +481,8 @@ typedef struct DialogFuncs
 	gboolean	(*dialogs_show_save_as) (void);
 	gboolean	(*dialogs_show_input_numeric) (const gchar *title, const gchar *label_text,
 				 gdouble *value, gdouble min, gdouble max, gdouble step);
+	gchar*		(*dialogs_show_input)(const gchar *title, GtkWindow *parent, const gchar *label_text,
+				const gchar *default_text);
 }
 DialogFuncs;
 
